fix screen on iphonexr, revise contents

--- a/src/components/MicPlayer/style.css
+++ b/src/components/MicPlayer/style.css
@@ -83,7 +83,7 @@
    }
 
    .mobile-button.clicked {
-       transform: scale(1.2);
+       transform: scale(1.3);
        background-color: var(--fluentifyprimary-500);
        /* Adjust the scale factor as needed */
    }
